--- a/Pharma.html
+++ b/Pharma.html
@@ -486,7 +486,7 @@ li{
 
     <div >
 		<div class="col-12" >
-			<p  style="text-align: justify;">MLC Pharma Equipments is one of the leading Manufacturers & Exporters of various kinds of Pharmaceutical Machineries. We are specialized in Containment Equipment (Isolator, Glove box, LAF, Pass Box). We have been in the manufacture industry for the last 3 years and are pioneers for Containment equipment in India. Our company is ISO 9001:2000 certified. Recently, we have started manufacturing Injectable & Packaging Machinery like Pre-fill Syringe machine, Plunger rod inserting, back stop ring and labeling machine, Filling, Sealing, Inspection, Labeling, and Conveyers.</p>
+			<p  style="text-align: justify;">MLC Pharma Clean Room Equipments is one of the leading Manufacturers & Exporters of various kinds of Pharmaceutical Machineries. We are specialized in Containment Equipment (Isolator, Glove box, LAF, Pass Box). We have been in the manufacture industry for the last 3 years and are pioneers for Containment equipment in India. Our company is ISO 9001:2000 certified. Recently, we have started manufacturing Injectable & Packaging Machinery like Pre-fill Syringe machine, Plunger rod inserting, back stop ring and labeling machine, Filling, Sealing, Inspection, Labeling, and Conveyers.</p>
 			<p  style="text-align: justify;">We are in the business of manufacture industry since last 3 years. We are pioneer for Containment equipment’s in India.</p>
 		</div>
 	</div>
@@ -538,7 +538,7 @@ li{
     <div class="row content-section">
         <div class="col-md-12">
             <h2 style="color: #1560bd;">Dust Collector</h2>
-            <p>ASIAN PHARMA EQUIPMENTS manufactures industrial dust collectors for dust control in various applications. Dust 
+            <p>MLC PHARMA CLEAN ROOM EQUIPMENTS manufactures industrial dust collectors for dust control in various applications. Dust 
                 collection system improves air-quality and reduces health risk. Special design for sifter and multimill.</p>
         </div>
     </div>
