--- a/index.html
+++ b/index.html
@@ -1017,11 +1017,9 @@ max-width: 680px !important;
 <div class="elementor-widget-wrap elementor-element-populated">
 <div class="img-block elementor-element elementor-element-0066fc7 elementor-widget elementor-widget-content-image" data-id="0066fc7" data-element_type="widget" data-widget_type="content-image.default">
 	<div class="row justify-content-center">
-		<div class="col-lg-8">
-		  <div class="elementor-widget-container text-center">
-			<img src="images/vindus_clients_images/health.jpg" class="img-fluid">
+		<div>
+			<img src="images/vindus_clients_images/health.jpg" class="img-fluid"  >
 		  </div>
-		</div>
 	  </div>
 </div>
 </div>
@@ -1540,12 +1538,12 @@ var essb_settings = {"ajax_url":"https:\/\/jthemes.net\/themes\/wp\/martex\/wp-a
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br>+91 7726932023
 								</p>
 								
 
