--- a/auditing.html
+++ b/auditing.html
@@ -332,7 +332,7 @@ li{
                     <p class="text-custom-muted">
                         Auditing is defined as the on-site verification activity, such as inspection or examination, of a process or quality system, to ensure compliance to requirements. An audit can apply to an entire organization or might be specific to a function, process, or production step.</p>
                         
-                      <p class="text-custom-muted">  Maha Lakshmi Consultancy has been providing 3rd Party Independent QEHS audits to all industries since its inception.
+                      <p class="text-custom-muted">  ML Consultancy has been providing 3rd Party Independent QEHS audits to all industries since its inception.
                     </p>
                 </div>
             </div>
@@ -533,12 +533,12 @@ li{
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759<br>+91 7726932023
 								</p>
 								
 
