--- a/survelliance.html
+++ b/survelliance.html
@@ -124,14 +124,14 @@
     height: 400px; /* Adjust height as needed */
 
     /* Desktop background image */
-    background-image: url('images/vindus_clients_images/Surveillance.webp'); /* Replace with actual desktop image URL */
+    background-image: url('images/vindus_clients_images/Surveillance.png'); /* Replace with actual desktop image URL */
 }
 
 /* Media query for mobile devices */
 @media (max-width: 767px) {
     .jumbotron {
         /* Mobile-specific styles */
-        background-image: url('images/vindus_clients_images/Surveillance.webp'); /* Replace with actual mobile image URL */
+        background-image: url('images/vindus_clients_images/Surveillance.png'); /* Replace with actual mobile image URL */
         height: 150px; /* Adjust height for mobile */
     }
 }
