--- a/certification1.html
+++ b/certification1.html
@@ -813,12 +813,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759<br> +91 7726932023
 								</p>
 								
 
