--- a/fallprotection.html
+++ b/fallprotection.html
@@ -305,15 +305,22 @@
 			</header>	<!-- END HEADER -->
 <br>
 
-<div class="content" style="background-image: url('images/vindus_clients_images/fallprotect.gif');">
-	<div class="container4">
-		<h1 style="color: #010156; margin: 20px; text-align: center;">Fall Protection</h1>
-		<div>
-			<h5 style="margin: 10px;">Personal Fall Arrest Systems</h5>
-			<p style="text-align: justify;">Personal fall arrest systems consist of an anchorage connector, body wear, and a connecting device. When these components are used properly, and in conjunction with each other, they form a system that is vitally important in fall hazard situations. Body wear and connecting devices (e.g. lanyards, fall-limiters/self-retracting life lines) must meet all OSHA, ANSI Z359 “Safety Requirements for Personal Fall Arrest Systems (PFAS), Subsystems and Components”, and ANSI A10.14-1991 “Fall Protection Systems – American National Standard for Construction and Demolition Operations” requirements.</p>
-		</div>
-		<!-- Additional sections can be added here -->
-	</div>
+<div class="container" style="margin-top: 55px;">
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-md-12">
+                        <img src="images/vindus_clients_images/fall protection.webp" class="card-img" alt="Banner Image" width="500px">
+                    </div>
+                </div>
+            </div>
+			
+            <div class="row">
+                <div class="col-md-12 text-center mb-4">
+                    <h2 class="orange-heading">Fall Protection</h2>
+                </div>
+				<p style="text-align: justify;"><strong> Fall Arrest Systems</strong>
+				 consist of an anchorage connector, body wear, and a connecting device. When these components are used properly, and in conjunction with each other, they form a system that is vitally important in fall hazard situations. Body wear and connecting devices (e.g. lanyards, fall-limiters/self-retracting life lines) must meet all OSHA, ANSI Z359 “Safety Requirements for Personal Fall Arrest Systems (PFAS), Subsystems and Components”, and ANSI A10.14-1991 “Fall Protection Systems – American National Standard for Construction and Demolition Operations” requirements.</p>
+            </div>
 </div>
 
 <div class="container10">
@@ -507,12 +514,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
 								</p>
 								
 
