--- a/bodyprotection.html
+++ b/bodyprotection.html
@@ -420,11 +420,10 @@
 	</div>
 	<div class="row justify-content-center">
 		<div class="col-10 col-md-8 col-lg-6">
-		  <div class="image d-flex justify-content-center">
-			<img src="images/vindus_clients_images/body.jpg" alt="image">
-		  </div>
+			<div class="image d-flex justify-content-center">
+				<img src="images/vindus_clients_images/body.jpg" alt="image" class="img-fluid">
+			</div>
 		</div>
-	  </div>
 	</div>
 	<div class="container8" style="text-align: justify;">
 		<h2 style="text-align: center; margin: 30px; color: rgb(2, 2, 63);">Types of Clothing and Body Protection
@@ -578,12 +577,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
 								</p>
 								
 
