--- a/services2.html
+++ b/services2.html
@@ -396,6 +396,7 @@
                                     <ol>
                                         <li>ISO Certification of company’s related to OHSMS, EMS, QMS & IMS. </li>
                                         <li>Internal Audit’s in organizations related to QEHS. </li>
+					<li>Employment preparation related to QEHS. </li>
                                         <li>Documentation preparation related to QEHS. </li>
                                         <li>Preparing website related to QEHS.</li>
                                         <li>Fire Equipment Installations and Fire Licenses </li>
@@ -505,12 +506,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
 								</p>
 								
 
