--- a/powersystem.html
+++ b/powersystem.html
@@ -917,7 +917,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <img src="images/vindus_clients_images/power.jpg" alt="Power Image" class="img-fluid">
+                                        <img src="images/vindus_clients_images/power.jpg" alt="Power Image" class="img-fluid" width="90%">
                                     </div>
                                     <div class="col-md-12 mt-4 mt-md-0">
                                         <img src="images/vindus_clients_images/powerssystems.jpg" alt="Power Systems Image" class="img-fluid">
@@ -1243,12 +1243,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
 								</p>
 								
 
