--- a/Pharma.html
+++ b/Pharma.html
@@ -836,12 +836,12 @@ li{
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25" style="margin-bottom: 0;">
-									<a href="mailto:yourdomain@mail.com" style="color:#fff; display: inline-block;">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff; display: inline-block;">
 									  <i class="fas fa-envelope" style="vertical-align: middle;"></i>info@mlcqehs.com
 									</a>
 								  
 																	  <br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 , +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
 								</p>
 								
 
