--- a/survelliance.html
+++ b/survelliance.html
@@ -131,7 +131,7 @@
 @media (max-width: 767px) {
     .jumbotron {
         /* Mobile-specific styles */
-        background-image: url('images/vindus_clients_images/Survelliance.png'); /* Replace with actual mobile image URL */
+        background-image: url('images/vindus_clients_images/Surveillance.png'); /* Replace with actual mobile image URL */
         height: 150px; /* Adjust height for mobile */
     }
 }
@@ -478,12 +478,12 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
+									<a href="info@mlcqehs.com" style="color:#fff;">
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
 									<br><br>
-									<i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
+									<i class="fas fa-mobile-alt"></i> +91 9949845759<br>+91 7726932023
 								</p>
 								
 
