--- a/footprotection.html
+++ b/footprotection.html
@@ -388,7 +388,13 @@ p {
                         <li><strong>Puncture-Resistant Shoes:</strong> Designed to protect the midsole of the foot where sharp objects can pierce or penetrate the sole of the shoe.</li>
                         <li><strong>Slip-Resistant Shoes:</strong> Provides slip-resistant tread for wet, oily, and/or greasy floors. Shoe chains, cleats, or spikes are available to fit over existing boots to prevent falls on ice, snow, or other slick surfaces.</li>
                     </ul>
-                    <img src="images/vindus_clients_images/foot.jpg" alt="foot image">
+                    <div class="container">
+						<div class="row">
+						  <div class="col-12">
+							<img src="images/vindus_clients_images/foot.jpg" alt="foot image" class="img-fluid">
+						  </div>
+						</div>
+					  </div>
                     <p><strong>Note:</strong> Never wear ice or snow cleats when walking on hard surfaces other than snow or ice.</p>
                 </div>
             </div>
