--- a/auditing.html
+++ b/auditing.html
@@ -125,12 +125,13 @@ li{
         .body{
             font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 			text-align: justify;
+        }
+	body{
 		-webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
-
-        }
+	}
         .heading-orange {
             color: #1560bd;
         }
