--- a/index.html
+++ b/index.html
@@ -232,7 +232,12 @@
        display: none;
     }
 }
-
+body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
 </style>
 	</head>
 
