--- a/fireprotection.html
+++ b/fireprotection.html
@@ -231,7 +231,12 @@
         #clients img {
             transition: all 0.4s ease-in-out;
         }
-		
+	body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}	
 </style>
 	</head>
 
