--- a/firedetection.html
+++ b/firedetection.html
@@ -200,6 +200,12 @@
 #footer-3{
     width:100%;
 }
+	body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
 body {
             margin: 0;
             font-family: Arial, sans-serif;
