--- a/firesuppression.html
+++ b/firesuppression.html
@@ -295,7 +295,12 @@ body {
         #clients img {
             transition: all 0.4s ease-in-out;
         }
-		
+	body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}	
 
 </style>
 	</head>
