--- a/Pharma.html
+++ b/Pharma.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-          <title>Pharma Equipments</title>							
+          <title>ML Consultancy</title>							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
 		<!-- GOOGLE FONTS -->
@@ -301,7 +301,12 @@ li{
             transition: all 0.4s ease-in-out;
         }
 		
-
+body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
     
 </style>
 
