--- a/incidentinvestigation.html
+++ b/incidentinvestigation.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-          <title>Incident Investigation Report</title>
+          <title>ML Consultancy</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
@@ -203,6 +203,12 @@ li{
     .jumbotron {
         height: 170px; /* Adjust the height for mobile devices */
     }
+}
+	body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 </style>
 	</head>
