--- a/survelliance.html
+++ b/survelliance.html
@@ -116,25 +116,9 @@
     align-items: center; /* Vertically center the content (optional) */
     height: 100%; /* Adjust the height as needed */
 }
-.jumbotron {
-    /* Common styles */
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 400px; /* Adjust height as needed */
 
-    /* Desktop background image */
-    background-image: url('images/vindus_clients_images/Survelliance.png'); /* Replace with actual desktop image URL */
-}
 
-/* Media query for mobile devices */
-@media (max-width: 767px) {
-    .jumbotron {
-        /* Mobile-specific styles */
-        background-image: url('images/vindus_clients_images/Surveillance.png'); /* Replace with actual mobile image URL */
-        height: 150px; /* Adjust height for mobile */
-    }
-}
+
   .feature-icon {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -151,6 +135,25 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+}
+	@media (max-width: 767px) {
+    .header-wrapper {
+        background-color: white; /* Set the initial background color */
+        transition: none; /* Remove the transition effect */
+        padding: 10px 0; /* Increase padding to cover the toggle button and logo */
+    }
+
+    .header-wrapper.scrolled {
+        background-color: white; /* Set the background color when scrolled */
+    }
+
+    .navbar-dark .navbar-toggler-icon {
+        background-color: white; /* Change the background color of the toggle button */
+    }
+
+    .navbar-brand img {
+        filter: invert(1); /* Invert the color of the logo */
+    }
 }
 	
 </style>
@@ -332,8 +335,14 @@ body {
 
 
 <div class="container mt-5">
-	<div class="jumbotron ">
-    </div>
+	<div class="card mb-3" style="margin-top: 55px;">
+		<div class="row no-gutters">
+			<div class="col-md-12">
+				<img src="images/vindus_clients_images/Survelliance.png" class="card-img" alt="Banner Image" width="100%" height="400px">
+			</div>
+		</div>
+	</div>
+    <div>
 
 
     <div class="card mt-4" style="text-align: justify;">
