--- a/incidentinvestigation.html
+++ b/incidentinvestigation.html
@@ -193,7 +193,7 @@ li{
 
 
 .jumbotron {
-    background-image: url('images/vindus_clients_images/Incident banner.webp'); /* Replace with actual image URL */
+    background-image: url('images/vindus_clients_images/Incident ban.JPG'); /* Replace with actual image URL */
     background-size: cover;
 	width: 100%; /* Set the width to 100% of its container */
     height: 400px; /* Set the height to 400 pixels */
