--- a/survelliance.html
+++ b/survelliance.html
@@ -397,7 +397,9 @@ body {
         </div>
     </div>
     
-</div><br>
+</div>
+</div>
+	</div>
   
   <!-- Bootstrap JS and dependencies -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
