--- a/certification.html
+++ b/certification.html
@@ -200,6 +200,50 @@ body {
         filter: invert(1); /* Invert the color of the logo */
     }
 }
+
+
+	#clients {
+	padding: 60px 0;
+}
+
+#clients .clients-wrap {
+	border-top: 1px solid #d6eaff;
+	border-left: 1px solid #d6eaff;
+	margin-bottom: 30px;
+}
+
+#clients .client-logo {
+	padding: 64px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	border-right: 1px solid #d6eaff;
+	border-bottom: 1px solid #d6eaff;
+	overflow: hidden;
+	background: #fff;
+	height: 160px;
+}
+
+#clients img {
+	transition: all 0.4s ease-in-out;
+}
+.section-header h3 {
+	font-size: 36px;
+	color: #283d50;
+	text-align: center;
+	font-weight: 500;
+	position: relative;
+}
+
 </style>
 	</head>
 
@@ -479,6 +523,310 @@ body {
 
 
 
+<section id="clients" class="section-bg">
+
+		<div class="container">
+
+			<div class="section-header">
+				<h3 style="color: #1560bd; font-weight: bold;">Our Esteemed Clients With Our Associated Partners</h3> <br>
+
+			</div>
+
+			<div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c1.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c2.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c3.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c4.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c5.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c6.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c7.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c8.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c9.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c10.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c11.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c12.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c13.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c14.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c15.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c16.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c17.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c18.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c19.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c20.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c21.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c22.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c23.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c24.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c25.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c26.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c27.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c28.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c29.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c30.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c31.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c32.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c33.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c34.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c35.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c36.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c37.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c38.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c39.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+			
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c40.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c41.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c42.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c43.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c44.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c45.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c46.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c47.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c48.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c49.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c50.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c51.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c52.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-4 col-xs-6">
+					<div class="client-logo">
+						<img src="images/vindus_clients_images/c53.jpeg" class="img-fluid" alt="">
+					</div>
+				</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			</div>
+
+		</div>
+
+	</section>
 
 
 
